# my-python-project-template

./: .gitignore  README.md  pyproject.toml
my_python_project_template/: main.py
